--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@ i{
 }
 .banner .imgbo{
     width:100%;
-    height:694px;
+    height:auto;
     position:absolute;
     top:0;
     left:0;
@@ -100,12 +100,12 @@ i{
 
 .box{
     width: 100%;
-    height: 585px;
+    height: auto;
     background-image:url("../img/hire_bg.jpg");
     background-size:cover;
 }
 .box .con{
-    height: 585px;
+    height: auto;
     margin: 0 auto;
 }
 .box .con .left{
@@ -131,9 +131,10 @@ i{
 }
 .box .con .wl a{
     display:block;
-    width:216px;
-    height:81px;
-    line-height:81px;
+    /* width:216px; */
+    /* height:29px; */
+    padding: 20px 70px;
+    line-height:29px;
     text-align:center;
     border:2px solid #2ec06c;
     box-sizing:border-box;
@@ -141,12 +142,14 @@ i{
     margin:50px 10px 0 0;
     float:left;
     border-radius:6px;
+
 }
 .box .con .wr a{
     display:block;
-    width:198px;
-    height:81px;
-    line-height:81px;
+    /* width:198px; */
+    /* height:29px; */
+    padding: 20px 70px;
+    line-height:29px;
     text-align:center;
     border:2px solid #2ec06c;
     box-sizing:border-box;
@@ -164,10 +167,15 @@ i{
     height: 585px;
     float: left;
 }
+.box .con .right img{
+    width: 100%;
+    height: 584px;
+}
+
 
 
 .work{
-    height:456px;
+    height:auto;
     padding:100px 0 50px;
     margin: 0 auto;
 }
@@ -215,42 +223,254 @@ i{
     font-family: 'karlaregular';
     margin: 0 0 10px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.part{
-    width:100%;
-    height:373px;
-    background-color:darkblue;
+.some{
+    width: 100%;
+    height: 373px;
     position: relative;
     top: 0;
     left: 0;
-} 
+    background-image: url("../img/sponsor_bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+.some .one{
+    width: 100%;
+    height: 173px;
+    padding: 100px 0;
+    background-color: #000 ;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+.some .one .to{
+    height: 100%;
+    padding: 0 15px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    
+}
+.some .one .to h1{
+    font-weight: 500;
+    font-family: 'asapregular';
+    font-size: 18px;
+    line-height: 20px;
+    color: #fff;
+    margin-bottom: 75px;
+    text-align: center;
+}
+.some .one .to .but{
+    width: 100%;
+    height: 20px;
+
+}
+.some .one .to .but .le{
+    width: 20px;
+    height: 20px;
+    background-image:url("../img/left_nav.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    float: left;
+}
+.some .one .to .but .rig{
+    width: 20px;
+    height: 20px;
+    background-image:url("../img/right_nav.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    float: right;
+}
+.goods{
+    height: auto;
+    padding: 100px 0 80px;
+    margin: 0 auto;
+}
+.goods h1{
+    color: #202020;
+    font-size: 30px;
+    line-height: 40px;
+    font-family: 'asapregular';
+    text-align: center;
+    font-weight: 400;
+}
+.goods h2{
+    color: #202020;
+    font-size: 30px;
+    line-height: 40px;
+    font-family: 'asapregular';
+    margin-bottom: 25px;
+    text-align: center;
+    font-weight: 400;
+}
+.goods h2 span{
+    color: #2ec06c;
+    font-weight: 600;
+}
+.goods p{
+    color: #666666;
+    font-family: "karlaregular";
+    font-size: 16px;
+    line-height: 29px;
+    margin: 0 15% 15px;
+    text-align: center;
+}
+.goods .cont{
+    height: 724px;
+    margin-top: 60px;
+}
+.goods .cont li{
+    height: 342px;
+    padding: 0 15px;
+    margin-bottom: 20px;
+    float: left;
+    box-sizing: border-box;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+.goods .cont li .con{
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+}
+.goods .cont li img{
+    width: 100%;
+}
+.goods .cont li h3{
+    height: 22px;
+    padding: 25px 0;
+    background-color: #EEEEEE;
+    border-radius: 0 0 10px 10px;
+    color: #202020;
+    font-family: "asapregular";
+    font-size: 20px;
+    text-align: center;
+    font-weight: 400;
+}
+.goods .cont li .con .tan{
+    height: 270px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 9;
+    width: 100%;
+    background-color: #2EC06C ;
+    transform: scale(0);
+    transition-duration: 0.3s;
+    transition-property: transform;
+    transition-timing-function: ease-out;
+    opacity: 0.9;
+}
+.goods .cont li .con .tan .tan1{
+    display: block;
+    border: 3px solid #fff;
+    color: #fff; 
+    font-weight: 700;
+    left: 0;
+    letter-spacing: 1px;
+    overflow: hidden;
+    padding: 15px 40px;
+    /* position: absolute; */
+    text-transform: uppercase;
+    top: 40%;
+    transition: all 0.3s ease 0s;
+    text-decoration: none
+
+}
+.goods .cont li:hover .tan{
+    display: block;
+       transform: scale(1);
+    transition-duration: 0.3s;
+    transition-property: transform;
+    transition-timing-function: ease-out;
+    opacity: 0.9;
+}
+.part{
+    width: 100%;
+    height: 459px;
+    position: relative;
+    top: 0;
+    left: 0;
+    background-image: url("../img/feedback_bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+.part .pa{
+    width: 100%;
+    height: 459px;
+    background-image: url("../img/feedback_ov.png");
+    overflow: hidden;
+}
+.part .pa .word{
+    height: 259px;
+    /* background-color: red; */
+    margin:100px auto ;
+    padding:  15px;
+    box-sizing: border-box;
+}
+.part .pa .word p{
+    font-family: 'asapregular';
+    font-size: 18px;
+    line-height: 29px;
+    margin-bottom: 30px;
+    text-align: center;
+    color: #7e7e7e;
+}
+.part .pa .word h1{
+    font-family: 'asapbold';
+    color: #2EC06C;
+    font-size: 18px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+.part .pa .word h1 span{
+    color: #fff;
+}
+.part .pa .word .dian{
+    height: 27px;
+    text-align: center;
+    overflow: hidden;
+}
+.part .pa .word .dian ul{
+    height: 27px;
+    width: 130px;
+    margin: 0 auto;
+}
+.part .pa .word .dian ul li{
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    float: left;
+    background-color: #b3d4fc;
+    margin: 5px 7px;
+}
+
+
+
+.end{
+    height: 100px;
+    background-color: #eeeeee;
+    margin-top: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -288,265 +508,171 @@ i{
 }
 /* 超小屏 */
 @media screen and (max-width:768px){
+
     .container{
         width: auto;
     }
     .col-xs-1{
-        width: 5%;
+        width: 8.33333%;
     }
     .col-xs-2{
-        width: 10%;
+        width: 16.66666%;
     }
     .col-xs-3{
-        width: 15%;
-    }
-    .col-xs-4{
-        width: 20%;
-    }
-    .col-xs-5{
         width: 25%;
     }
+    .col-xs-4{
+        width: 33.33333%;
+    }
+    .col-xs-5{
+        width: 41.66666%;
+    }
     .col-xs-6{
-        width: 30%;
-    }
-    .col-xs-7{
-        width: 35%;
-    }
-    .col-xs-8{
-        width: 40%;
-    }
-    .col-xs-9{
-        width: 45%;
-    }
-    .col-xs-10{
         width: 50%;
     }
-    .col-xs-11{
-        width: 55%;
+    .col-xs-7{
+        width: 58.33333%;
     }
-    .col-xs-12{
-        width: 60%;
+    .col-xs-8{
+        width: 66.66666%;
     }
-    .col-xs-13{
-        width: 65%;
-    }
-    .col-xs-14{
-        width: 70%;
-    }
-    .col-xs-15{
+    .col-xs-9{
         width: 75%;
     }
-    .col-xs-16{
-        width: 80%;
+    .col-xs-10{
+        width: 83.33333%;
     }
-    .col-xs-17{
-        width: 85%;
+    .col-xs-11{
+        width: 91.66666%;
     }
-    .col-xs-18{
-        width: 90%;
-    }
-    .col-xs-19{
-        width: 95%;
-    }
-    .col-xs-20{
+    .col-xs-12{
         width: 100%;
     }
-
 }
 /* 小屏 */
-
 @media screen and (min-width:768px){
     .container{
         width: 750px;
     }
     .col-sm-1{
-        width: 5%;
+        width: 8.33333%;
     }
     .col-sm-2{
-        width: 10%;
+        width: 16.66666%;
     }
     .col-sm-3{
-        width: 15%;
-    }
-    .col-sm-4{
-        width: 20%;
-    }
-    .col-sm-5{
         width: 25%;
     }
+    .col-sm-4{
+        width: 33.33333%;
+    }
+    .col-sm-5{
+        width: 41.66666%;
+    }
     .col-sm-6{
-        width: 30%;
-    }
-    .col-sm-7{
-        width: 35%;
-    }
-    .col-sm-8{
-        width: 40%;
-    }
-    .col-sm-9{
-        width: 45%;
-    }
-    .col-sm-10{
         width: 50%;
     }
-    .col-sm-11{
-        width: 55%;
+    .col-sm-7{
+        width: 58.33333%;
     }
-    .col-sm-12{
-        width: 60%;
+    .col-sm-8{
+        width: 66.66666%;
     }
-    .col-sm-13{
-        width: 65%;
-    }
-    .col-sm-14{
-        width: 70%;
-    }
-    .col-sm-15{
+    .col-sm-9{
         width: 75%;
     }
-    .col-sm-16{
-        width: 80%;
+    .col-sm-10{
+        width: 83.33333%;
     }
-    .col-sm-17{
-        width: 85%;
+    .col-sm-11{
+        width: 91.66666%;
     }
-    .col-sm-18{
-        width: 90%;
-    }
-    .col-sm-19{
-        width: 95%;
-    }
-    .col-sm-20{
+    .col-sm-12{
         width: 100%;
     }
-
-    /* 中屏 */
+}
+/* 中屏 */
 @media screen and (min-width:992px){
     .container{
         width: 970px;
     }
     .col-md-1{
-        width: 5%;
+        width: 8.33333%;
     }
     .col-md-2{
-        width: 10%;
+        width: 16.66666%;
     }
     .col-md-3{
-        width: 15%;
-    }
-    .col-md-4{
-        width: 20%;
-    }
-    .col-md-5{
         width: 25%;
     }
+    .col-md-4{
+        width: 33.33333%;
+    }
+    .col-md-5{
+        width: 41.66666%;
+    }
     .col-md-6{
-        width: 30%;
-    }
-    .col-md-7{
-        width: 35%;
-    }
-    .col-md-8{
-        width: 40%;
-    }
-    .col-md-9{
-        width: 45%;
-    }
-    .col-md-10{
         width: 50%;
     }
-    .col-md-11{
-        width: 55%;
+    .col-md-7{
+        width: 58.33333%;
     }
-    .col-md-12{
-        width: 60%;
+    .col-md-8{
+        width: 66.66666%;
     }
-    .col-md-13{
-        width: 65%;
-    }
-    .col-md-14{
-        width: 70%;
-    }
-    .col-md-15{
+    .col-md-9{
         width: 75%;
     }
-    .col-md-16{
-        width: 80%;
+    .col-md-10{
+        width: 83.33333%;
     }
-    .col-md-17{
-        width: 85%;
+    .col-md-11{
+        width: 91.66666%;
     }
-    .col-md-18{
-        width: 90%;
-    }
-    .col-md-19{
-        width: 95%;
-    }
-    .col-md-20{
+    .col-md-12{
         width: 100%;
     }
+}
 /* 大屏 */
 @media screen and (min-width:1200px){
     .container{
         width: 1170px;
     }
     .col-lg-1{
-        width: 5%;
+        width: 8.33333%;
     }
     .col-lg-2{
-        width: 10%;
+        width: 16.66666%;
     }
     .col-lg-3{
-        width: 15%;
-    }
-    .col-lg-4{
-        width: 20%;
-    }
-    .col-lg-5{
         width: 25%;
     }
+    .col-lg-4{
+        width: 33.33333%;
+    }
+    .col-lg-5{
+        width: 41.66666%;
+    }
     .col-lg-6{
-        width: 30%;
-    }
-    .col-lg-7{
-        width: 35%;
-    }
-    .col-lg-8{
-        width: 40%;
-    }
-    .col-lg-9{
-        width: 45%;
-    }
-    .col-lg-10{
         width: 50%;
     }
-    .col-lg-11{
-        width: 55%;
+    .col-lg-7{
+        width: 58.33333%;
     }
-    .col-lg-12{
-        width: 60%;
+    .col-lg-8{
+        width: 66.66666%;
     }
-    .col-lg-13{
-        width: 65%;
-    }
-    .col-lg-14{
-        width: 70%;
-    }
-    .col-lg-15{
+    .col-lg-9{
         width: 75%;
     }
-    .col-lg-16{
-        width: 80%;
+    .col-lg-10{
+        width: 83.33333%;
     }
-    .col-lg-17{
-        width: 85%;
+    .col-lg-11{
+        width: 91.66666%;
     }
-    .col-lg-18{
-        width: 90%;
-    }
-    .col-lg-19{
-        width: 95%;
-    }
-    .col-lg-20{
+    .col-lg-12{
         width: 100%;
-    }
+    }                
+}
+    
